# TextEditor

./: .gitignore  CMakeLists.txt  README.md
include/: WindowDefinition.h  WindowDefinition.hpp  WindowWidgets.h  WindowWidgets.hpp  main.hpp  resource.h  windowCalls.h
resources/: res.rc  test.rc
src/: WindowDefinition.cpp  WindowWidgets.cpp  main.cpp  windowCalls.cpp
